added some extention and issu solved

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         flex items-center justify-center">
   
             <div class="text-center sm:p-5">
-                <h2 class="font-extrabold lg:text-6xl md:text-5xl sm:text-4xl lg:mb-6 md:mb-5 sm:mb-3 text-white">We Provide Effective <br> Legal Solutions</h2>
+                <h2 class="font-extrabold lg:text-6xl md:text-5xl sm:text-4xl lg:mb-6 md:mb-5 sm:mb-5 text-white">We Provide Effective <br> Legal Solutions</h2>
                 <p class="mb-7 text-[#E7E7E7]">There are many variations of passages of Lorem Ipsum available, but the majority <br> have suffered alteration in some form, by injected humour.</p>
                 <div class="flex justify-center gap-5">
                 <input type="text" placeholder="Search your services" class="py-2 bg-amber-50 lg:px-20 rounded-lg text-start">
@@ -61,37 +61,37 @@
             sm:grid-cols-1
             place-items-center
             gap-4">
-                <div class="w-[300px] border text-center p-7">
+                <div class="w-[300px] bg-[#E7E7E7] rounded-2xl text-center p-7">
                     <img class="inline-block " src="images/business.png" alt="">
                     <h5 class="font-extrabold text-3xl pt-7 pb-5">Business Law</h5>
                     <p class="text-[#707070] pb-7">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                     <img class="inline-block " src="images/Frame.png" alt="">
                 </div>
-                <div class="w-[300px] border text-center p-7">
+                <div class="w-[300px] bg-[#E7E7E7] rounded-2xl text-center p-7">
                     <img class="inline-block " src="images/criminal.png" alt="">
                     <h5 class="font-extrabold text-3xl pt-7 pb-5">Criminal Law</h5>
                     <p class="text-[#707070] pb-7">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                     <img class="inline-block " src="images/Frame.png" alt="">
                 </div>
-                <div class="w-[300px] border text-center p-7">
+                <div class="w-[300px] bg-[#E7E7E7] rounded-2xl text-center p-7">
                     <img class="inline-block " src="images/child.png" alt="">
                     <h5 class="font-extrabold text-3xl pt-7 pb-5">Child Support</h5>
                     <p class="text-[#707070] pb-7">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                     <img class="inline-block " src="images/Frame.png" alt="">
                 </div>
-                <div class="w-[300px] border text-center p-7">
+                <div class="w-[300px] bg-[#E7E7E7] rounded-2xl text-center p-7">
                     <img class="inline-block " src="images/education.png" alt="">
                     <h5 class="font-extrabold text-3xl pt-7 pb-5">Education Law</h5>
                     <p class="text-[#707070] pb-7">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                     <img class="inline-block " src="images/Frame.png" alt="">
                 </div>
-                <div class="w-[300px] border text-center p-7">
+                <div class="w-[300px] bg-[#E7E7E7] rounded-2xl text-center p-7">
                     <img class="inline-block " src="images/divorce.png" alt="">
                     <h5 class="font-extrabold text-3xl pt-7 pb-5">Divorce Law</h5>
                     <p class="text-[#707070] pb-7">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                     <img class="inline-block " src="images/Frame.png" alt="">
                 </div>
-                <div class="w-[300px] border text-center p-7">
+                <div class="w-[300px] bg-[#E7E7E7] rounded-2xl text-center p-7">
                     <img class="inline-block " src="images/tax.png" alt="">
                     <h5 class="font-extrabold text-3xl pt-7 pb-5">Tax Law</h5>
                     <p class="text-[#707070] pb-7">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
@@ -103,11 +103,21 @@
         <section>
             <h3 class="font-extrabold text-4xl text-center pb-5 pt-25">What Our Client Say</h3>
             <p class="text-center text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have <br> suffered alteration in some form, by injected humour.</p>
-            <div class="h-[400px] sm:h-auto bg-[linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.8)),url('/images/banner.png')] bg-cover bg-center mt-8 rounded-lg  text-center text-white">
+            <div class="
+            lg:w-[800px] 
+            mx-auto
+            sm:h-auto 
+            bg-[linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.8)),url('/images/banner.png')] 
+            bg-cover 
+            bg-center 
+            mt-8 
+            rounded-lg  
+            text-center 
+            text-white">
                 <img class="w-40 rounded-full inline-block pt-10" src="images/nayem-ahmmed.png" alt="">
                 <h4 class="font-extrabold text-2xl pt-4">Nayem Ahmmed</h4>
                 <h6 class="text-[20px] pt-1">Front-End Developer</h6>
-                <p class="lg:px-20 md:px-10 sm:5 pt-3 ">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                <p class="lg:px-20 md:px-10 sm:5 pt-3 pb-5 ">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words.</p>
             </div>
         </section>
 
