more some issue solved

--- a/index.html
+++ b/index.html
@@ -133,27 +133,60 @@
                     <div class="
                     p-4 mt-10 
                     rounded-2xl 
-                    lg:w-[540px] 
+                    lg:w-[520px] 
                     bg-[#F3F3F3]
                     ">
                     <h5 class="font-extrabold text-2xl">1. Are application fee waivers available?</h5>
                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                 </div>
-                <div class="p-4 mt-10 lg:w-[540px] rounded-2xl bg-[#F3F3F3]">
+                <div class="p-4 mt-10 lg:w-[520px] rounded-2xl bg-[#F3F3F3]">
                     <h5 class="font-extrabold text-2xl">1. Are application fee waivers available?</h5>
                 </div>
-                <div class="p-4 mt-10 lg:w-[540px] rounded-2xl bg-[#F3F3F3]">
+                <div class="p-4 mt-10 lg:w-[520px] rounded-2xl bg-[#F3F3F3]">
                     <h5 class="font-extrabold text-2xl">1. Are application fee waivers available?</h5>
                 </div>
-                 <div class="p-4 mt-10 lg:w-[540px] rounded-2xl bg-[#F3F3F3]">
+                 <div class="p-4 mt-10 lg:w-[520px] rounded-2xl bg-[#F3F3F3]">
                     <h5 class="font-extrabold text-2xl">1. Are application fee waivers available?</h5>
                 </div>
             </div>
             <div>
-                    <img class="mt-10" src="images/faq.png" alt="">
+                    <img class="mt-10 lg:w-[420px]" src="images/faq.png" alt="">
                 </div>
         </div>
         </section>
+
+        <section class=""> 
+            <h3 class="font-extrabold text-center text-3xl pt-25 mb-3">Contact With Us</h3> 
+            <p class="lg:w-[600px] md:w-[550px] mx-auto text-center mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p> 
+            <div class="lg:flex gap-5"> 
+                <div class="lg:max-w-[490px] w-full flex flex-wrap justify-center gap-2"> 
+                <div class="lg:w-[240px] md:w-[300px] sm:w-[300px] bg-[#F3F3F3] p-10 text-center"> <img class="mx-auto" src="images/location.png" alt=""> 
+                    <h5 class="py-4">Address</h5> 
+                    <p>Sylhet, Habiganj, <br> Madhobpur, Chowmohani.</p> 
+                </div> 
+            <div class="lg:w-[240px] md:w-[300px] sm:w-[300px] bg-[#F3F3F3] p-10 text-center"> 
+                <img class="mx-auto" src="images/call.png" alt=""> 
+                <h5 class="py-4">Call Us</h5> <p>01888252746 <br> 01737590087</p> 
+            </div> 
+            <div class="lg:w-[240px] md:w-[300px] sm:w-[300px] bg-[#F3F3F3] p-10 text-center"> 
+                <img class="mx-auto" src="images/email.png" alt=""> 
+                <h5 class="py-4">Email Us</h5> <p>nayemk0087@gmail.com <br> nayemk0087@gmail.com</p> 
+            </div> 
+            <div class="lg:w-[240px] md:w-[300px] sm:w-[300px] bg-[#F3F3F3] p-10 text-center"> 
+                <img class="mx-auto" src="images/time.png" alt=""> 
+                <h5 class="py-4">Working Hours</h5> 
+                <p>Mon-Fri: 9AM to 5PM <br> Sunday: 9AM to 1 PM</p> 
+            </div> 
+        </div> 
+            <div class="max-w-[400px] md:mx-auto md:pt-10 lg:pt-5">
+                <input class="w-[400px] bg-[#F3F3F3] p-4 mb-4" type="text" placeholder="Your Name"> 
+                <input class="w-[400px] bg-[#F3F3F3] p-4 mb-4" type="text" placeholder="Your Email"> 
+                <input class="w-[400px] bg-[#F3F3F3] p-4 mb-4" type="text" placeholder="Subject"> 
+                <input class="w-[400px] pb-[100px] bg-[#F3F3F3] p-4" type="text" placeholder="Subject"> 
+                <button class="w-[400px] py-5 mt-5 rounded bg-[#B68C5A]">Send Message</button>
+            </div>  
+        </div> 
+    </section>
     </main>
     <footer>
 
